update microbenchmark figs

--- a/graphs/micro-time-delay.Rnw
+++ b/graphs/micro-time-delay.Rnw
@@ -1,38 +1,33 @@
 \begin{figure}
     \centering
-<<micro:time-delay,cache=TRUE,echo=FALSE,warning=TRUE,verbose=TRUE,fig.width='\\columnwidth',fig.height=3>>=
+<<micro:time-delay,cache=TRUE,echo=FALSE,warning=TRUE,verbose=TRUE,fig.width='\\columnwidth',fig.height=6>>=
 
+library(patchwork)
 library(ggplot2)
 library(showtext)
 font_add_google("Lato")
 showtext_auto()
 
-data <- read.csv("minrtt-50-delay-dist.out", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric", "numeric", "numeric", "numeric"))
+data <- read.csv("minrtt-50-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric", "numeric", "numeric", "numeric"))
 colnames(data) <- c("t", "mm_delay", "inbox_delay", "diff_delay", "mm_thru", "inbox_thru", "diff_thru")
 
 p1 <- ggplot() + 
     #geom_step(data=raw, aes(x=t, y=recv, colour="raw"),size=1) + 
-    geom_step(data=data, aes(x=t,y=mm_delay, colour="true"),size=1) + 
     geom_step(data=data, aes(x=t,y=inbox_delay, colour="measured"),size=1)  + 
+    geom_step(data=data, aes(x=t,y=mm_delay, colour="true"),size=1) + 
     theme_minimal() + 
-    theme(legend.position="bottom") + 
+    theme(legend.position="top") + 
     #scale_color_manual(name = "", values = c(true = "blue", windowed="red", raw="green")) +
     #scale_color_brewer(name="", aesthetics=c("colour"),palette="Paired", labels=c("Measured", "Measured (Windowed)", "Bottleneck")) + 
-    scale_color_manual(name="",labels=c(mesaured="Measured", true="Bottleneck"), values=c(measured="#2c7bb6", true="#d7191c")) +
+    scale_color_manual(name="",labels=c(measured="Measured", true="Bottleneck"), values=c(true="#2c7bb6", measured="#d7191c")) +
     scale_x_continuous(breaks=seq(0,max(data$t),by=1)) +
     scale_y_continuous(breaks=seq(0,36,by=6)) +
     xlab("Time (seconds)") + 
     ylab("Delay (ms)") + 
     coord_cartesian(xlim=c(20,30), ylim=c(0,36)) + 
-    theme(text = element_text(size=18))
+    theme(text = element_text(size=17))
 
-p1
-
-@
-
-<<micro:dist-delay,cache=TRUE,echo=FALSE,warning=TRUE,verbose=TRUE,fig.width='\\columnwidth',fig.height=3>>=
-
-data <- read.csv("minrtt-delay-dist.out", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric","numeric","numeric","numeric"))
+data <- read.csv("minrtt-delay-dist.data", sep=" ", header=FALSE, colClasses=c("numeric","numeric","numeric","numeric","numeric","numeric","numeric"))
 colnames(data) <- c("t", "mm_delay", "inbox_delay", "diff_delay", "mm_thru", "inbox_thru", "diff_thru")
 
 # Adjust for mahimahi delay overhead
@@ -51,9 +46,9 @@ probs_delay <- c(0.1,0.9)
 quants_delay <- quantile(data$diff_delay, prob=probs_delay)
 df_delay$quant <- factor(findInterval(df_delay$x, quants_delay))
 
-xmin_delay <- -10
-xmax_delay <- 10
-xchange_delay <- 2
+xmin_delay <- -5
+xmax_delay <- 5
+xchange_delay <- 1
 # Set x (-10, -8 , ... 8, 10)
 xtics_delay <- setNames(as.double(seq(xmin_delay, xmax_delay,by=xchange_delay)), seq(xmin_delay, xmax_delay,by=xchange_delay))
 #all_breaks <- append(xtics, quants)
@@ -77,27 +72,30 @@ quants_delay <- quantile(data$diff_delay, prob=probs_delay)
 
 p_delay <- ggplot(df_delay, aes(x,y)) + geom_line() +
     geom_ribbon(aes(ymin=0,ymax=y,fill=quant,alpha=0.7)) +
-    geom_vline(aes(xintercept=quants_delay[["10%"]]), linetype="dashed") +
-    geom_vline(aes(xintercept=quants_delay[["50%"]]), linetype="dashed") +
-    geom_vline(aes(xintercept=quants_delay[["90%"]]), linetype="dashed") +
+    geom_segment(aes(x=quants_delay[["10%"]], xend=quants_delay[["10%"]], y=0, yend=0.7), linetype="dashed") +
+    geom_segment(aes(x=quants_delay[["50%"]], xend=quants_delay[["50%"]], y=0, yend=0.7), linetype="dashed") +
+    geom_segment(aes(x=quants_delay[["90%"]], xend=quants_delay[["90%"]], y=0, yend=0.7), linetype="dashed") +
     scale_x_continuous(breaks=xtics_delay) + #, limits=c(-20,20)) +
     # Put origin at 0
     scale_y_continuous(expand=c(0,0)) + #, limits=c(0,.4)) +
     scale_fill_brewer(guide="none") +
     xlab("Difference Between True and Measured RTT (ms)") +
     ylab("PDF") +
-    coord_cartesian(xlim=c(xmin_delay, xmax_delay)) +
-    theme_bw() +
+    coord_cartesian(xlim=c(xmin_delay, xmax_delay),, ylim=c(0,0.8)) +
+    theme_minimal() +
     theme(legend.position="none") +
-    annotate("segment", x=-10.9, xend=-1.2, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
-    annotate("segment", x=-1.2, xend=-10.9, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
-    annotate("text", x=c(-6), y=c(0.55), label=c("Underestimate (10%)"), size=3, color="black") +
-    annotate("segment", x=.65, xend=10.9, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
-    annotate("segment", x=10.9, xend=.65, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
-    annotate("text", x=c(6), y=c(0.55), label=c("Overestimate (10%)"), size=3, color="black") +
-    theme(text = element_text(size=18))
+    annotate("segment", x=-4.9, xend=-1.2, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
+    annotate("segment", x=-1.2, xend=-4.9, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
+    annotate("text", x=c(-3), y=c(0.55), label=c("Underestimate (10%)"), size=4.5, color="black") +
+    annotate("segment", x=.65, xend=4.9, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
+    annotate("segment", x=4.9, xend=.65, y=0.5,yend=0.5, colour="black", size=1, arrow=arrow(length = unit(0.15,"cm"))) +
+    annotate("text", x=c(3), y=c(0.55), label=c("Overestimate (10%)"), size=4.5, color="black") +
+    annotate("text", x=c(-1), y=c(0.75), label=c("10%"), size=4.5, color="black") +
+    annotate("text", x=c(-0.1), y=c(0.75), label=c("50%"), size=4.5, color="black") +
+    annotate("text", x=c(0.7), y=c(0.75), label=c("90%"), size=4.5, color="black") +
+    theme(text = element_text(size=17))
 
-p_delay
+p1 + p_delay + plot_layout(ncol=1, heights=c(1.5,2))
 
 @
 
