--- a/micro-time-delay.tex
+++ b/micro-time-delay.tex
@@ -1,71 +1,9 @@
 \begin{figure}
     \centering
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/micro:time-delay-1} 
 
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning in file(file, "{}rt"{}): cannot open file 'minrtt-50-delay-dist.out': No such file or directory}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in file(file, "{}rt"{}): cannot open the connection}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in `colnames<-`(`*tmp*`, value = c("{}t"{}, "{}mm\_delay"{}, "{}inbox\_delay"{}, : attempt to set 'colnames' on an object with less than two dimensions}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$t: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'p1' not found}}\end{kframe}
-\end{knitrout}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-
-
-{\ttfamily\noindent\color{warningcolor}{\#\# Warning in file(file, "{}rt"{}): cannot open file 'minrtt-delay-dist.out': No such file or directory}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in file(file, "{}rt"{}): cannot open the connection}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in `colnames<-`(`*tmp*`, value = c("{}t"{}, "{}mm\_delay"{}, "{}inbox\_delay"{}, : attempt to set 'colnames' on an object with less than two dimensions}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_delay: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_delay: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_delay: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data.frame(x = dens\_delay\$x, y = dens\_delay\$y): object 'dens\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_delay: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in is.unsorted(vec): object 'quants\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in which(df\_delay\$quant == 1): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'quants\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_delay, c(quants\_delay[["{}10\%"{}]] - 1e-04, med, 0)): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_delay, c(quants\_delay[["{}10\%"{}]] + 1e-04, med, 1)): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in which(df\_delay\$quant == 2): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'quants\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_delay, c(quants\_delay[["{}90\%"{}]] - 1e-04, med, 1)): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in rbind(df\_delay, c(quants\_delay[["{}90\%"{}]] + 1e-04, med, 2)): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in data\$diff\_delay: object of type 'closure' is not subsettable}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in ggplot(df\_delay, aes(x, y)): object 'df\_delay' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in eval(expr, envir, enclos): object 'p\_delay' not found}}\end{kframe}
 \end{knitrout}
 
     \caption{\name's estimate of the delay }
