--- a/impl.tex
+++ b/impl.tex
@@ -46,7 +46,7 @@ Our patches to the TBF qdisc comprise $112$ lines of C.
 % \an{cut?}\an{Additionally, we remove one line in the rate update to disable re-filling the token bucket on rate changes to prevent a penalty for frequent rate updates\footnote{by default, TBF instantaneously re-fills the token bucket when the set rate changes. In our implementation, the \inbox sets the rate frequently, causing rate fluctuations. We therefore disable this functionality.}.}
 
 \Para{\capinbox control plane} We implement it to run in user-space in $1167$ lines of Rust.
-We use CCP~\cite{ccp} to run different congestion control algorithms (described next). CCP is a platform for expressing congestion control algorithms in an asynchronous format, which makes it a natural choice for our epoch-based measurement architecture. The control plane uses \texttt{libccp}~\cite{ccp} to interface with the congestion control algorithm, and  \texttt{libnl} to communicate with the qdisc.
+We use CCP~\cite{ccp} to run different congestion control algorithms (described next). CCP is a platform for expressing congestion control algorithms in an asynchronous format, which makes it a natural choice for our epoch-based measurement architecture. The control plane uses \texttt{libccp}~\cite{ccp} to interface with the congestion control algorithm, and  \texttt{libnl} to communicate with the qdisc.s ther
 
 \Para{Congestion control algorithms} We use existing implementations of congestion control algorithms on CCP~\cite{nimbus, copa, bbr} to compute sending rates at the \inbox. If the algorithm uses a congestion window, the \inbox computes $\text{\emph{effective rate}} = \frac{\text{CWND}}{\text{RTT}}$ and sets the rate of the qdisc to be the minimum of the explicit rate and this effective rate.
 %Upon receiving new RTT samples, the \inbox updates the effective rate, and updates the qdisc rate if appropriate.
