--- a/eval.tex
+++ b/eval.tex
@@ -10,7 +10,7 @@ Given \name's ability to move the in-network queues to the \inbox (as shown earl
     %\item Under what conditions do \name's performance benefits hold? (\S\ref{s:robust:cross})
 \end{enumerate}
 
-\subsection{Understanding \name's Performance Benefits}\label{s:eval:fct}
+\subsection{Understanding Performance Benefits}\label{s:eval:fct}
 
 \paragrapha{Experimental Setup}
 We evaluate our implementation of \name (discussed in \S\ref{s:impl}) using network emulation via mahimahi~\cite{mahimahi}.
